--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,18 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+development:
+  service: Disk
+  root: <%= Rails.root.join("storage") %>
+
+# production:
+#   service: :amazon # Example for Amazon S3
+#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+#   region: us-east-1 # Example region
+#   bucket: your-bucket-name
+
+
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
