Stabilize events test suite and image jobs;2;13~- Add FactoryBot support and base factories for amigos/events;2;13~- Replace amigo/event location fixtures with realistic, schema-compliant data;2;13~- Fix amigo_details fixtures with real personal_bio snippets;2;13~- Rewrite ProcessImageJob and ProcessLocationImageJob tests to use factories;2;13~- Update EventsController tests to hit literal /api/v1/events routes;2;13~- Adjust expectations to JSON:API-style { data: [...] } payloads;2;13~- Ensure test DB is in sync via db:test:prepare

--- a/test/fixtures/amigo_details.yml
+++ b/test/fixtures/amigo_details.yml
@@ -5,7 +5,9 @@ one:
   available_to_host: false
   willing_to_help: false
   willing_to_donate: false
-  personal_bio: MyText
+  personal_bio: >
+    I enjoy meeting new people over coffee and learning about different cultures.
+    In my spare time I like reading, walking in nature, and exploring local art events.
   amigo: one
 
 two:
@@ -13,5 +15,7 @@ two:
   available_to_host: false
   willing_to_help: false
   willing_to_donate: false
-  personal_bio: MyText
+  personal_bio: >
+    I am interested in volunteering at community gatherings and supporting local causes.
+    I work remotely in tech and am always looking for ways to give back when I can.
   amigo: two
