--- a/test/fixtures/event_locations.yml
+++ b/test/fixtures/event_locations.yml
@@ -1,49 +1,60 @@
+# test/fixtures/event_locations.yml
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  event: one
-  address: MyString
-  business_name: MyString
-  business_phone: MyString
-  floor, limit: MyString
-  street_number: MyString
-  street_name: MyString
-  room_no: MyString
-  apartment_suite_number: MyString
-  city_sublocality: MyString
-  city: MyString
-  state_province_subdivision: MyString
-  state_province: MyString
-  state_province_short: MyString
-  country: MyString
-  country_short: MyString
-  postal_code: MyString
-  postal_code_suffix: MyString
-  post_box: MyString
-  latitude: 9.99
-  longitude: 9.99
-  time_zone: MyString
+  business_name: "Test Event Location One"
+  business_phone: "555-111-2222"
+  address: "123 Main St, West Covina, CA 91790"
+  floor: 1
+  street_number: "123"
+  street_name: "Main St"
+  room_no: "101"
+  apartment_suite_number: "A"
+  city_sublocality: "Historic Center"
+  city: "West Covina"
+  state_province_subdivision: "Los Angeles County"
+  state_province: "California"
+  state_province_short: "CA"
+  country: "United States"
+  country_short: "US"
+  postal_code: "91790"
+  postal_code_suffix: "1234"
+  post_box: ""
+  latitude: 34.068
+  longitude: -117.938
+  time_zone: "America/Los_Angeles"
+  location_type: "Cafe"
+  owner_name: "Owner One"
+  capacity_seated: 40
+  availability_notes: "Weeknights after 6pm"
+  has_food: true
+  has_drink: true
 
 two:
-  event: two
-  address: MyString
-  business_name: MyString
-  business_phone: MyString
-  floor, limit: MyString
-  street_number: MyString
-  street_name: MyString
-  room_no: MyString
-  apartment_suite_number: MyString
-  city_sublocality: MyString
-  city: MyString
-  state_province_subdivision: MyString
-  state_province: MyString
-  state_province_short: MyString
-  country: MyString
-  country_short: MyString
-  postal_code: MyString
-  postal_code_suffix: MyString
-  post_box: MyString
-  latitude: 9.99
-  longitude: 9.99
-  time_zone: MyString
+  business_name: "Test Event Location Two"
+  business_phone: "555-333-4444"
+  address: "456 Second St, West Covina, CA 91791"
+  floor: 2
+  street_number: "456"
+  street_name: "Second St"
+  room_no: "202"
+  apartment_suite_number: "B"
+  city_sublocality: "Downtown"
+  city: "West Covina"
+  state_province_subdivision: "Los Angeles County"
+  state_province: "California"
+  state_province_short: "CA"
+  country: "United States"
+  country_short: "US"
+  postal_code: "91791"
+  postal_code_suffix: "5678"
+  post_box: ""
+  latitude: 34.070
+  longitude: -117.940
+  time_zone: "America/Los_Angeles"
+  location_type: "Community Center"
+  owner_name: "Owner Two"
+  capacity_seated: 80
+  availability_notes: "Weekends only"
+  has_food: false
+  has_drink: true
