--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,19 +1,34 @@
-
-name: "Amigos Unite API CI"
+name: Backend CI
 
 on:
   push:
-    branches: ["main", "Amigos_Unite_Ongoing_Dev"]
+    branches: [ main ]
+    paths:
+      - 'app/**'
+      - 'config/**'
+      - 'db/**'
+      - 'Gemfile'
+      - 'Gemfile.lock'
+      - 'test/**'
+      - '.github/workflows/backend-ci.yml'
   pull_request:
-    branches: ["main", "Amigos_Unite_Ongoing_Dev"]
+    branches: [ main ]
+    paths:
+      - 'app/**'
+      - 'config/**'
+      - 'db/**'
+      - 'Gemfile'
+      - 'Gemfile.lock'
+      - 'test/**'
+      - '.github/workflows/backend-ci.yml'
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     services:
-      db:
-        image: postgis/postgis:16-3.4
+      postgres:
+        image: postgres:17
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -21,21 +36,17 @@ jobs:
         ports:
           - "5432:5432"
         options: >-
-          --health-cmd "pg_isready -U postgres -d amigos_unite_api_test"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready -U postgres -d amigos_unite_api_test"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     env:
       RAILS_ENV: test
-      PGHOST: localhost
-      PGUSER: postgres
-      PGPASSWORD: postgres
-      PGPORT: 5432
-      # CI is automatically set by GitHub Actions; your test.rb already uses ENV["CI"].present?
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/amigos_unite_api_test
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Ruby
@@ -46,15 +57,21 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y libpq-dev
+          sudo apt-get update -qq
+          sudo apt-get install -y --no-install-recommends \
+            libpq-dev postgresql-client
+
+      - name: Wait for Postgres
+        run: |
+          until pg_isready --host=localhost --port=5432 --username=postgres; do
+            echo "Waiting for Postgres..."
+            sleep 1
+          done
 
       - name: Prepare database
         run: |
-          bin/rails db:prepare
+          bin/rails db:test:prepare
 
       - name: Run test suite
         run: |
-          bin/rails test
-          # If you switch to RSpec later:
-          # bundle exec rspec
+          bundle exec rails test
