--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,12 @@
 default: &default
-  adapter: postgis
+  adapter:  postgis
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 8 } %>
+  pool:     <%= ENV.fetch("RAILS_MAX_THREADS") { 8 } %>
   username: <%= ENV.fetch("PGUSER", "drruby") %>
   host:     <%= ENV.fetch("PGHOST", "/tmp") %>
   port:     <%= ENV.fetch("PGPORT", 5432) %>
+  # If DATABASE_URL is set, Rails will prefer it over the other fields.
+  url:      <%= ENV["DATABASE_URL"] %>
 
 development:
   <<: *default
