--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -1,4 +1,3 @@
-
 name: Build, Test, Push (GHCR) - API
 
 on:
@@ -16,7 +15,7 @@ env:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     services:
       db:
@@ -36,25 +35,32 @@ jobs:
     env:
       RAILS_ENV: test
       DATABASE_URL: postgres://postgres:postgres@localhost:5432/amigos_unite_api_test
-      # IMPORTANT: set this repo secret to the contents of config/credentials/test.key
+      # Repo secret value: contents of config/credentials/test.key
       RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY_TEST }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install system dependencies
+      - name: Install OS deps (Postgres + libvips)
         run: |
+          set -euxo pipefail
           sudo apt-get update
-          sudo apt-get install -y \
+          sudo apt-get install -y --no-install-recommends \
             libpq-dev \
+            pkg-config \
             libvips \
-            libvips-tools \
-            pkg-config
+            libvips-dev \
+            libvips-tools
+          sudo ldconfig
 
       - name: Verify libvips is available
         run: |
+          set -euxo pipefail
           vips --version
-          ldconfig -p | grep -i vips || true
+          ldconfig -p | grep -i vips
+          dpkg -l | grep -i vips || true
+          ls -l /usr/lib/*/libvips.so* /usr/lib/*/vips.so* || true
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -75,10 +81,11 @@ jobs:
 
   build_and_push:
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
