--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -44,28 +44,31 @@ jobs:
     env:
       RAILS_ENV: test
       DATABASE_URL: postgres://postgres:postgres@localhost:5432/amigos_unite_api_test
-      # Optional but recommended if your app boots using credentials in test
       RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY_TEST }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Debug: show commit + lockfile platforms
+      - name: Debug - show commit and lockfile identity
         run: |
           set -euxo pipefail
           git rev-parse HEAD
-          echo "---- Gemfile.lock PLATFORMS ----"
-          sed -n '/^PLATFORMS/,/^DEPENDENCIES/p' Gemfile.lock
+          echo "PWD=$(pwd)"
+          echo "---- find Gemfile/Gemfile.lock ----"
+          find . -maxdepth 4 -name Gemfile -o -name Gemfile.lock -print
           echo "---- Gemfile.lock BUNDLED WITH ----"
           sed -n '/^BUNDLED WITH/,$p' Gemfile.lock
+          echo "---- Gemfile.lock PLATFORMS ----"
+          sed -n '/^PLATFORMS/,/^DEPENDENCIES/p' Gemfile.lock
 
       - name: Install OS deps
         run: |
           set -euxo pipefail
           sudo apt-get update -qq
           sudo apt-get install -y --no-install-recommends \
-            libpq-dev postgresql-client pkg-config libvips libvips-dev libvips-tools
+            libpq-dev postgresql-client pkg-config \
+            libvips libvips-dev libvips-tools
           sudo ldconfig
 
       - name: Set up Ruby
@@ -77,12 +80,11 @@ jobs:
           cache-version: 1
 
       - name: Materialize test credentials key (validate shape)
-        if: ${{ env.RAILS_MASTER_KEY != '' }}
         run: |
           set -euo pipefail
           KEY="$(printf '%s' "${RAILS_MASTER_KEY:-}" | tr -d '\r\n')"
           if [[ ! "$KEY" =~ ^[0-9A-Fa-f]{32}$ ]]; then
-            echo "ERROR: RAILS_MASTER_KEY_TEST must be exactly 32 hex chars. Got length=${#KEY}." >&2
+            echo "ERROR: RAILS_MASTER_KEY_TEST must be exactly 32 hex characters. Got length=${#KEY}." >&2
             exit 1
           fi
           mkdir -p config/credentials
@@ -97,7 +99,7 @@ jobs:
             sleep 1
           done
 
-      - name: Prepare database (CI-safe: no seeds)
+      - name: Prepare database (CI-safe - no seeds)
         run: |
           set -euxo pipefail
           bin/rails db:drop db:create db:schema:load
