--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,16 +1,8 @@
+# .github/workflows/backend-ci.yml
+
 name: Backend CI
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - "app/**"
-      - "config/**"
-      - "db/**"
-      - "spec/**"
-      - "Gemfile"
-      - "Gemfile.lock"
-      - ".github/workflows/backend-ci.yml"
   pull_request:
     branches: [main]
     paths:
@@ -21,6 +13,7 @@ on:
       - "Gemfile"
       - "Gemfile.lock"
       - ".github/workflows/backend-ci.yml"
+      - ".github/workflows/ghcr.yml"
 
 jobs:
   test:
