--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -26,7 +26,7 @@ jobs:
 
     services:
       db:
-        image: postgis/postgis:17-3.4
+        image: postgres:17
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
