Added path comment to top of deploy-smoke.yml file

--- a/.github/workflows/deploy-smoke.yml
+++ b/.github/workflows/deploy-smoke.yml
@@ -1,8 +1,9 @@
+#.github/workflows/deploy-smoke.yml
 
 name: Deploy Smoke Test (VPS + Private GHCR)
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch: {}``
 
 permissions:
   contents: read
