CI: fix deploy-smoke workflow YAML; remove README.odt

--- a/.github/workflows/deploy-smoke.yml
+++ b/.github/workflows/deploy-smoke.yml
@@ -3,7 +3,7 @@
 name: Deploy Smoke Test (VPS + Private GHCR)
 
 on:
-  workflow_dispatch: {}``
+  workflow_dispatch: {}
 
 permissions:
   contents: read
